# na-tools

./: AGENT.md  LICENSE  README.md  na-tools.spec  nekro-agent.yaml  pyproject.toml
.github/workflows/: release.yml
src/na_tools/: __init__.py  __main__.py  cli.py
src/na_tools/commands/: backup.py  bind.py  config_cmd.py  daemon.py  install.py  list_cmd.py  logs.py  napcat.py  orchestration.py  remove.py  restore.py  status.py  update.py  upgrade.py  use.py
src/na_tools/core/: compose.py  config.py  docker.py  na_config.py  platform.py
src/na_tools/daemon/: __init__.py  app.py  auth.py  channel.py  errors.py  instances.py  jobs.py  logs.py  socks.py
src/na_tools/services/: __init__.py  backup_service.py  common.py  config_service.py  daemon_service.py  install_service.py  instance_service.py  job_events.py  napcat_service.py  orchestration_service.py  remove_service.py  restore_service.py  update_service.py  upgrade_service.py
src/na_tools/utils/: console.py  crypto.py  network.py  privilege.py
tests/: test_cli_upgrade_notice.py  test_command_services.py  test_daemon_api.py  test_daemon_channel.py  test_daemon_command.py  test_daemon_service.py  test_daemon_socks.py  test_orchestration_service.py  test_restore_command.py  test_update_command.py  test_update_service.py  test_upgrade_command.py  test_upgrade_service.py
